--- a/src/main/webapp/tutorial.xhtml
+++ b/src/main/webapp/tutorial.xhtml
@@ -7,7 +7,8 @@
       xmlns:rich="http://richfaces.org/rich">
     <ui:composition template="template/main.xhtml">
         <ui:define name="content">
-            <h1>Available Tutorials</h1>
+            <h1>Available Tutorials <h:graphicImage url="images/Raspi_Colour_R.png" height="48"/></h1>
+
             <ul>
                 <li><a href="led0.xhtml">On Board ACT LED Control</a></li>
                 <li><a href="piglow.xhtml">PiGlow Control</a></li>
