--- a/src/main/webapp/gpio.xhtml
+++ b/src/main/webapp/gpio.xhtml
@@ -11,9 +11,15 @@
     </ui:define>
     <ui:define name="content">
         <h1>Background</h1>
-        <p>The GPIO pins on a Raspberry Pi are a great way to interface physical devices like buttons and LEDs with the little Linux processor.</p>
+        <p>The GPIO pins on a Raspberry Pi are a great way to interface physical devices like buttons and LEDs with the little Linux processor. In these tutorials, we will be wiring up LEDs to the GPIO pins. In the wiring diagrams shown, note that a LED has one leg that is longer
+	        than the other(the anode+), and the wiring of the legs must match that of the diagram to avoid burning out the LED.
+        </p>
         <h1>pilab.ControlGpioExample</h1>
         Taken from: <a href="http://pi4j.com/example/control.html">Simple GPIO Control using Pi4J</a>
+        <h2>Wiring Diagram</h2>
+        The following diagram shows wiring the GPIO 1 pin to a LED anode with a resistor in between, and GND to the cathode. The Pi board labels P1, so P12 which is GPIO 1 is the 6th pin on the outside edge of the header.
+        <img src="images/gpio-control-example.png" />
+        
         <h1>pilab.ListenGpioExample</h1>
         Taken from: <a href="http://pi4j.com/example/listener.html">GPIO State Listener Example using Pi4J</a>
         <h1>pilab.TriggerGpioExample</h1>
