--- a/src/main/webapp/gpio.xhtml
+++ b/src/main/webapp/gpio.xhtml
@@ -39,6 +39,9 @@ Total time: 38 seconds
 		<p>The source for the pilab.ControlGpioExample program is src/test/java/pilab/ControlGpioExample.java</p>
         <h1>pilab.ListenGpioExample</h1>
         Taken from: <a href="http://pi4j.com/example/listener.html">GPIO State Listener Example using Pi4J</a>
+        <p>The following example demonstrates how to setup a listener for GPIO pin state changes on the Raspberry Pi. This listener implementation is far more efficient than constantly polling and querying for the the GPIO pin state. The listener implementation is based on GPIO hardware interrupts not state polling.</p>
+        <h2>Wiring Diagram</h2>
+        <p>The following wiring diagram hows <img src="images/gpio-listener-example.png" /></p>
         <h1>pilab.TriggerGpioExample</h1>
         Taken from: <a href="http://pi4j.com/example/trigger.html">GPIO Triggers Example using Pi4J</a>
     </ui:define>
