--- a/src/main/webapp/piglow.xhtml
+++ b/src/main/webapp/piglow.xhtml
@@ -12,7 +12,7 @@
     <ui:define name="content">
         <h1>Background</h1>
         <p>
-        <img src="images/piglow-498x498.jpg"> PiGlow is a small add on board for the Raspberry Pi that provides 18 individually controllable LEDs.
+        <img src="images/piglow-498x498.jpg" /> PiGlow is a small add on board for the Raspberry Pi that provides 18 individually controllable LEDs.
         PiGlow is based on an IC that communicates via i2c protocol. You need to enable i2c communication on your
         Raspberry Pi for it to work. If you do an:</p>
 <pre>
