--- a/src/main/webapp/tutorial.xhtml
+++ b/src/main/webapp/tutorial.xhtml
@@ -12,7 +12,7 @@
             <ul>
                 <li><a href="led0.xhtml">On Board ACT LED Control</a></li>
                 <li><a href="piglow.xhtml">PiGlow Control</a></li>
-                <li><a href="piglow.xhtml">GPIO Usage</a></li>
+                <li><a href="gpio.xhtml">GPIO Usage</a></li>
             </ul>
         </ui:define>
     </ui:composition>
